--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ nav{
 }
 
 #logo-icon{
-    margin-top: 6px;
+    margin-top: 4px;
     font-size: 40px;
     height: 40px;
     width: 70px;
@@ -39,4 +39,24 @@ nav{
 #content, #authorize-button, #signout-button{
     display: none;
     font-family: 'Patua One', cursive;
+}
+
+#authorize-button-sidenav,#signout-button-sidenav{
+    padding: 4px 111px;
+    padding-bottom: 42px;
+} 
+
+#logo-text-nav{
+    font-family: 'Acme', sans-serif;
+    font-size: 60px;
+    padding-bottom: 70px;
+}
+
+#logo-icon-nav{
+    font-size: 100px;
+    height: 103px;
+    width: 240px;
+    margin: 10px 30px;
+    padding-left: 75px;
+    border-radius: 20px;
 }
