--- a/index.css
+++ b/index.css
@@ -17,14 +17,14 @@ nav{
     margin-bottom: 10px;
 }
 
-#logo-icon{
-    margin-top: 4px;
+#logo-icon-large{
+    margin-top: 6px;
     font-size: 40px;
     height: 40px;
     width: 70px;
     padding-top: 0px;
     padding-left: 15px;
-    padding-bottom: 50px;
+    padding-bottom: 52px;
     border-radius: 12px;
 }
 
@@ -37,8 +37,38 @@ nav{
     padding-bottom: 35px;
 }
 
-#logo-text{
+#logo-text-large{
+    font-size: 55px;
+}
+
+#logo-icon-small{
+    margin-top: 3px;
     font-size: 35px;
+    height: 0px;
+    width: 70px;
+    padding-top: 0px;
+    padding-left: 17px;
+    padding-bottom: 50px;
+    border-radius: 12px;
+}
+
+#logo-text-small{
+    font-size: 26px;
+}
+
+#logo-icon-med{
+    margin-top: 6px;
+    font-size: 40px;
+    height: 40px;
+    width: 70px;
+    padding-top: 0px;
+    padding-left: 15px;
+    padding-bottom: 53px;
+    border-radius: 12px;
+}
+
+#logo-text-med{
+    font-size: 50px;
 }
 
 #content, #authorize-button, #signout-button{
