--- a/index.css
+++ b/index.css
@@ -53,7 +53,8 @@ nav{
 }
 
 #logo-text-small{
-    font-size: 26px;
+    font-size: 21px;
+    font-weight: bold;
 }
 
 #logo-icon-med{
@@ -96,3 +97,8 @@ nav{
     border-radius: 20px;
 }
 
+#video{
+    border-style: solid;
+    border-width: 5px;
+    border-color: #ffff;
+}
